--- a/interface/templates/setup_vm.html
+++ b/interface/templates/setup_vm.html
@@ -1,1 +1,20 @@
-Hello
+{% load static swampdragon_tags %}
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title></title>
+</head>
+<body>
+
+<h2 id="call_status">Test</h2>
+
+<!-- SwampDragon -->
+{% swampdragon_settings %}
+<script type="text/javascript" src="{% static 'swampdragon/js/dist/swampdragon.min.js' %}"></script>
+
+<!-- Monitor -->
+<script type="text/javascript" src="{% static 'call_status.js' %}"></script>
+
+</body>
+</html>
